2007-08-15    <tino@firebird.03.softkill.net>

	* file.h (tino_file_lstat_diff): 000 replaced by TINO_XXX

	* filetool.h (tino_file_gets): added

	* file.h (tino_file_fread, tino_file_fwrite, tino_file_fread)
	(tino_file_fgets, tino_file_ferror, tino_file_feof): added

	* md5.h (tino_md5_hex): reversed args
	(tino_md5_ctx, ...) made all lowercase.  Define
	TINO_NEED_MD5_COMPAT to create old (compat) defines.
	(tino_md5_byterev): renamed from tino_byteReverse
	(main): now uses tino_md5_hex
	(tino_md5_bin, tino_md5_buf, tino_md5_str): moved out-argument
	from first to last argument.  More compliant to my "standard".

2007-08-08    <tino@firebird.03.softkill.net>

	* xd.h (tino_xd): speedup

	* file.h (tino_file_lseek): added

	* data.h (tino_data_stream): FILE * version added (now memory
	buffers, int-file and FILE * can be handled equally)
	(tino_data_puts): added

	* xd.h (tino_xd): modified to use data.h

2007-08-07    <tino@firebird.03.softkill.net>

	* arg.h: Argument string added to tino_varg object (convenience)

2007-08-06    <tino@firebird.03.softkill.net>

	* alloc.h (tino_free_nullUb): changed prototype

2007-06-23    <tino@firebird.03.softkill.net>

	* auxbuf.h (tino_auxbuf_get_nrOn, tino_auxbuf_get_nr_filledOn) 
	(tino_auxbuf_freeOn): added

2007-08-06    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt_var_set_arg_imp): Now flag actions (like
	set etc.) are printed on debug again.
	(tino_getopt_print_option_name): added
	(tino_getopt_usage): tino_getopt_print_option_name now used
	(tino_getopt_init): DEFAULT_ENV implemented
	(tino_getopt_usage): help corrected

2007-05-12    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_freeOn): now uses tino_file_close

2007-06-13    <tino@firebird.03.softkill.net>

	* alloc.h (TINO_REALLOC0, TINO_REALLOC0_INC): added

2007-05-31    <tino@firebird.03.softkill.net>

	* getopt.h (TINO_GETOPT_MAXOPTS): TINO_MAXOPTS renamed
	(TINO_GETOPT_STRINGFLAG): added